position reply spinner correctly and fix word wrapping on replies

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -149,6 +149,12 @@ body {
   top: -1px;
 }
 
+.feed-wrapper .Spinner {
+  position: relative;
+  top: -2px;
+  margin-left: 5px;
+}
+
 .feed-wrapper .reply-to-post {
   margin-top: 5px;
 }
@@ -183,6 +189,10 @@ body {
 
 .feed-wrapper .reply-not-liked {
   color: #CCC;
+}
+
+.feed-wrapper .reply-body {
+  overflow-wrap: break-word;
 }
 
 .feed-wrapper .reply-timestamp {
